# kamaji

./: .env  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2021-02-17-105120_users/: up.sql
migrations/2021-02-18-100551_auth_infos/: down.sql  up.sql
src/: controller.rs  lib.rs  models.rs  schema.rs
src/controller/: crypto.rs  database.rs  io.rs
src/controller/database/: auth_info.rs  user.rs
src/models/: auth_infos.rs  users.rs
