[package]
name = "kamaji"
version = "0.1.0"
authors = ["Nils Kopshoff <nils@kopshoff.koeln>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database
# * uses postgres as database backend
# * uses chrono to map chrono::DateTime to postgres `Date` and `Timestamp`
diesel = { version="1.4.5", features=["postgres", "chrono"] }
chrono = "0.4"
# Access to .env
dotenv = "0.15.0"
# Logging
env_logger = "0.8.2"
log = "0.4"
# Crypto
rust-crypto = "^0.2"
